# pulse

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cargo-release.toml  clippy.toml  justfile  rustfmt.toml
.github/workflows/: ci.yml  coverage.yml  release.yml
examples/: pipeline.toml
pulse-bin/: Cargo.toml
pulse-bin/src/: main.rs
pulse-core/: Cargo.toml
pulse-core/src/: checkpoint.rs  config.rs  lib.rs  metrics.rs  record.rs
pulse-examples/: Cargo.toml
pulse-examples/examples/: sliding_avg.jsonl  wordcount.jsonl
pulse-io/: Cargo.toml
pulse-io/src/: lib.rs  parquet_sink.rs
pulse-io/tests/: kafka_integration.rs
pulse-ops/: Cargo.toml
pulse-ops/src/: lib.rs  time.rs  window.rs
pulse-state/: Cargo.toml
pulse-state/src/: lib.rs  mem.rs  rocks.rs
pulse-tests/fixtures/simple/: input.jsonl  pipeline.toml
