[workspace]
members = [
	"pulse-core",
	"pulse-ops",
	"pulse-state",
	"pulse-io",
	"pulse-examples",
    "pulse-bin",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Pulse Contributors"]
email = "brbtavares@outlook.com"
rust-version = "1.75"
repository = "https://github.com/brbtavares/pulse"
readme = "README.md"

[workspace.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "time"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
anyhow = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["parsing", "formatting", "macros"] }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
prometheus = "0.13"
axum = { version = "0.7", features = ["http1", "tokio"] }

# (no root crate dependencies; this is a virtual workspace manifest)
once_cell = "1.19"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
