[package]
name = "pulse-bin"
version = "0.1.1"
authors = ["Pulse Contributors"]
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Command-line binary for running Pulse dataflow pipelines."
publish = false

[dependencies]
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pulse-core = { path = "../pulse-core" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
pulse-ops = { path = "../pulse-ops" }
pulse-io = { path = "../pulse-io", features = ["parquet"] }
anyhow = { workspace = true }

[features]
default = []
kafka = ["pulse-io/kafka"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
axum = { workspace = true }
tower = { version = "0.5", features = ["util"] }
parquet = { version = "53" }
serde_json = "1"
