[package]
name = "pulse-examples"
version = "0.1.1"
authors = ["Pulse Contributors"]
edition = "2021"
license = "MIT"
publish = false
description = "Example dataflow pipelines demonstrating Pulse capabilities and integrations."

[dependencies]
pulse-core = { path = "../pulse-core" }
pulse-ops = { path = "../pulse-ops" }
pulse-io = { path = "../pulse-io" }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
