[package]
name = "pulse-io"
version = "0.1.0"
authors = ["Pulse Contributors"]
edition = "2021"
license = "MIT"
description = "Input/output connectors for Pulse — integrates with external systems such as Kafka, Arrow, and Parquet."
repository = "https://github.com/brbtavares/pulse"
readme = "README.md"

[features]
# Optional integrations. Enable per-crate via `--features` or in dependent crates.
arrow = ["dep:arrow"]
parquet = ["dep:parquet", "arrow"]
kafka = ["dep:rdkafka", "dep:futures", "dep:base64"]

[dependencies]
pulse-core = { path = "../pulse-core" }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
time = { workspace = true }
chrono = { version = "0.4", default-features = true, features = ["clock", "std", "serde"] }
arrow = { version = "53", optional = true }
parquet = { version = "53", optional = true }
# Use rdkafka with tokio integration; avoid compiling unless feature is enabled.
rdkafka = { version = "0.36", optional = true, default-features = false, features = ["tokio", "cmake-build"] }
futures = { version = "0.3", optional = true }
base64 = { version = "0.22", optional = true }
