[package]
name = "pulse-ops"
version = "0.1.0"
authors = ["Pulse Contributors"]
edition = "2021"
license = "MIT"

[dependencies]
pulse-core = { path = "../pulse-core" }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
