[package]
name = "pulse-ops"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Built-in operators and combinators for Pulse dataflows — map, filter, join, window, and custom processing logic."
repository.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[dependencies]
pulse-core  = { version = "0.1.0", path = "../pulse-core" }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", default-features = true, features = ["clock", "std", "serde"] }
futures = "0.3"
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
pulse-state = { path = "../pulse-state" }
