[package]
name = "pulse-state"
version = "0.1.0"
authors = ["Pulse Contributors"]
edition = "2021"
license = "MIT"
description = "State management utilities for Pulse — provides windowing, aggregations, and persistent operator state."
repository = "https://github.com/brbtavares/pulse"
readme = "README.md"

[features]
rocksdb = ["dep:rocksdb"]

[dependencies]
pulse-core = { path = "../pulse-core" }
async-trait = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
rocksdb = { version = "0.21", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
