[package]
name = "pulse-state"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "State management utilities for Pulse — provides windowing, aggregations, and persistent operator state."
repository.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
rocksdb = ["dep:rocksdb"]

[dependencies]
pulse-core = { version = "0.1.1", path = "../pulse-core" }
async-trait = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
rocksdb = { version = "0.21", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
